--- a/Teachers_Report_Test/Teachers_Reports_Test.csproj
+++ b/Teachers_Report_Test/Teachers_Reports_Test.csproj
@@ -65,6 +65,9 @@
       <Name>Teachers_Reports</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Test_Data.runsettings" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
